--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -2,7 +2,39 @@
 serif;
 font-family: 'Poppins',
 sans-serif;*/
-*{
-    font-family: 'Poppins',
-            sans-serif;
+:root{
+    --primary-color:#f9f7fe;
+    --tertiary-color:rgba(108, 99, 255, 1);
+   --default-fontfamliy:'Poppins',  sans-serif;
+   --heading-fontfamily:'Playfair Display',serif;
+}
+body{
+font-family: var(--default-fontfamliy);
+}
+.hero{
+    background-color:  var(--primary-color);
+    text-align: center;
+}
+.hero h2{
+   color: rgba(39, 33, 66, 1);
+    font-size: 36px;
+    font-weight: bold;
+
+}
+.hero h1{
+    font-size: 96px;
+    font-family: var(--heading-fontfamily);
+    color: gba(0, 0, 0, 1);
+}
+.hero p{
+    font-size: 24px;
+    font-weight: normal;
+    color: rgba(39, 33, 66, 1);
+}
+.hero-btn{
+    background-color:var(--tertiary-color);
+ box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
+ border-radius: 4px;
+ border-style: none;
+ padding: 15px 30px;
 }
