--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -46,6 +46,7 @@ p{
  border-style: none;
  padding: 15px 30px;
  font-size: 18px;
+ color: white;
 }
 .btn-outline{
     color: var(--tertiary-color);
