--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -93,3 +93,19 @@ padding: 10px 14px;
  .active-link{
     color: var(--tertiary-color);
  }
+ .blob{
+    height: 450px;
+    width: 450px;
+border-radius: 75% 25% 25% 75%  / 63% 39% 61% 37%;
+   background-color: #6c63ff;
+   margin-left: 20px;
+   margin-right: 80px;
+   overflow: hidden;
+   position: relative;
+   margin-top: 50px;
+ }
+ .blob img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+ }
