--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -108,4 +108,5 @@ border-radius: 75% 25% 25% 75%  / 63% 39% 61% 37%;
     width: 100%;
     height: 100%;
     object-fit: cover;
+    transform: scaleX(-1);
  }
